# gl-engine

./: CMakeLists.txt  README.md  gl-engine.cpp
include/glad/: glad.h
include/lights/: dirlight.hpp
include/shader/: shader.hpp
src/file/: stb_image.cpp
src/glad/: glad.c
src/lights/: dirlight.cpp
src/shader/: shader.cpp
src/shaders/: basic.frag  basic.vert
